@@ -58,7 +58,7 @@ void CGUIDialogVideoSettings::CreateSettings()
   AddSeparator(8);
   AddButton(VIDEO_SETTINGS_MAKE_DEFAULT, 12376);
   m_flickerFilter = g_guiSettings.GetInt("videoplayer.flicker");
-  AddSpin(VIDEO_SETTINGS_FLICKER, 13100, &m_flickerFilter, 0, 5);
+  AddSpin(VIDEO_SETTINGS_FLICKER, 13100, &m_flickerFilter, 0, 5, g_localizeStrings.Get(351).c_str());
   m_soften = g_guiSettings.GetBool("videoplayer.soften");
   AddBool(VIDEO_SETTINGS_SOFTEN, 215, &m_soften);
   AddSlider(VIDEO_SETTINGS_FILM_GRAIN, 14058, (int*)&g_stSettings.m_currentVideoSettings.m_FilmGrain, 0, 10);
